add download endpoints
