# pkg/resources/swagger.json
@@ -346,6 +346,35 @@
           "default"
         ]
       }
+    },
+    "/download": {
+      "get": {
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "$ref": "#/definitions/QueriesRequestElement",
+            "description": "JSON encoded QueriesRequestElement",
+            "required": true
+          },
+          {
+            "name": "time_format",
+            "in": "query",
+            "type": "string",
+            "description": "Textual representation of the date 'Mon Jan 2 15:04:05 -0700 MST 2006'. Example: 2006-01-02T15:04:05.000Z07:00 would format timestamps as rfc3339 with ms precision. Find details here: https://golang.org/pkg/time/#Time.Format"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "CSV file"
+          }
+        },
+        "operationId": "download",
+        "tags": [
+          "default"
+        ],
+        "produces": ["application/csv"]
+      }
     }
   },
   "produces": [
